--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="author" content="cosmos-themes" />
 
         <!--Page Title-->
-        <title>Clarks - vCard / Resume / Portfolio / CV Template</title>
+        <title>Maruti Raj Choudhary - vCard / Resume / Portfolio / CV</title>
 
         <!--Plugins Css-->
         <link rel="stylesheet" type="text/css" href="css/plugins.css" />
